# palanuk

./: .gitignore  CMakeLists.txt  README.md
.zed/: settings.json
anc/: Cargo.toml  README.md
anc/docs/: boot_lore.md  demo-topology.md  guide.md  network_addresses.md  network_lore.md  runtime_design.md  systemd_lore.md  topology.md
anc/experiments/gpio/: Cargo.toml
anc/experiments/hcsr04/: Cargo.toml
anc/experiments/nsm/: .gitignore  CMakeLists.txt  README.md
anc/experiments/nsm/anc/: README.md
anc/experiments/nsm/anc/docs/: boot_lore.md  demo-topology.md  runtime_design.md
anc/experiments/nsm/anc/experiments/gpio/src/: main.rs
anc/experiments/nsm/anc/experiments/panning_servo/: Cargo.toml
anc/experiments/nsm/anc/experiments/pwm/src/: main.rs
anc/experiments/nsm/anc/runtime/: Cargo.toml
anc/experiments/nsm/anc/runtime/docs/: build_lore.md  deploy.md
anc/experiments/nsm/anc/runtime/hal/cu-cam-pan/src/: lib.rs
anc/experiments/nsm/anc/runtime/hal/cu-hcsr04/: Cargo.toml
anc/experiments/nsm/anc/runtime/hal/cu-hcsr04/src/: lib.rs
anc/experiments/nsm/anc/runtime/hal/cu-powermon/: Cargo.toml
anc/experiments/nsm/anc/runtime/hal/cu-zenoh-sink/: Cargo.toml
anc/experiments/nsm/anc/runtime/hal/cu-zenoh-src/: Cargo.toml
anc/experiments/nsm/anc/runtime/hal/cu-zenoh-src/src/: lib.rs
anc/experiments/nsm/anc/runtime/palanuk-runtime/: _rtimecfg.ron  rtimecfg.ron
anc/experiments/nsm/anc/runtime/palanuk-runtime/src/: logreader.rs
anc/experiments/nsm/build-pi/: CMakeCache.txt  Makefile  anc_nsm  cmake_install.cmake  compile_commands.json
anc/experiments/nsm/cmake/: toolchain-aarch64-linux.cmake
anc/experiments/nsm/docs/: cross-comp-lore.md  cross-compilation.md
anc/experiments/nsm/odd/: README.md
anc/experiments/nsm/src/: bridge.cpp  bridge.h  corner_detection.cpp  corner_detection.h  frame_source.cpp  frame_source.h  line_detection.cpp  line_detection.h  main.cpp  pipeline.cpp  pipeline.h  types.h  visualization.h
anc/nsm/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cmake_install.cmake  compile_commands.json
anc/nsm/cmake/: toolchain-aarch64-linux.cmake
anc/nsm/docs/: cross-compilation.md  ide-setup.md  tuning.md
anc/nsm/src/: bridge.cpp  bridge.h  corner_detection.cpp  corner_detection.h  frame_source.cpp  line_detection.cpp  line_detection.h  main.cpp  pipeline.cpp  pipeline.h  preprocessing.cpp  preprocessing.h  types.h  visualization.cpp
anc/runtime/: .gitignore  Cargo.toml  justfile  zenoh_config.json5
anc/runtime/.cargo/: config.toml
anc/runtime/.zed/: settings.json
anc/runtime/aux/anc-pub/: Cargo.toml
anc/runtime/aux/anc-pub/src/: lib.rs
anc/runtime/aux/arbitrator/: Cargo.toml
anc/runtime/aux/arbitrator/src/: lib.rs
anc/runtime/aux/commander/: Cargo.toml
anc/runtime/aux/commander/src/: lib.rs
anc/runtime/aux/driver-seat/: Cargo.toml
anc/runtime/aux/e-stop-handler/: Cargo.toml
anc/runtime/aux/ec-pub/: Cargo.toml
anc/runtime/aux/ec-pub/src/: lib.rs
anc/runtime/aux/herald/: Cargo.toml
anc/runtime/aux/herald/src/: lib.rs
anc/runtime/aux/itp-merger/: Cargo.toml
anc/runtime/aux/itp-merger/src/: lib.rs
anc/runtime/aux/loop-mode-switch/: Cargo.toml
anc/runtime/aux/opencv-iox2/: Cargo.toml
anc/runtime/aux/opencv-iox2/src/: ipc.rs  lib.rs
anc/runtime/aux/opencv-splitter/: Cargo.toml
anc/runtime/aux/opencv-splitter/src/: lib.rs
anc/runtime/aux/panner-adapter/: Cargo.toml
anc/runtime/aux/panner-adapter/src/: lib.rs
anc/runtime/aux/propulsion-adapter/: Cargo.toml
anc/runtime/aux/propulsion-adapter/src/: lib.rs
anc/runtime/aux/propulsion-cleaver/: Cargo.toml  README.md
anc/runtime/aux/propulsion-cleaver/src/: lib.rs
anc/runtime/aux/speed-correction-summer/: Cargo.toml
anc/runtime/aux/speed-correction-summer/src/: lib.rs
anc/runtime/aux/speed-err-adapter/: Cargo.toml
anc/runtime/aux/speed-err-adapter/src/: lib.rs
anc/runtime/aux/zsrc-merger/: Cargo.toml
anc/runtime/aux/zsrc-merger/src/: lib.rs
anc/runtime/docs/: build_lore.md  deploy.md  logviz.md  odd_cfg.json5  runtime-stuff.md  speed_setpoint.md  ugv_cfg.json5  zenoh_deploy.md  zenoh_topics.md
anc/runtime/hal/: Cargo.toml  mtr-ctrlr.md
anc/runtime/hal/cu-cam-pan/: Cargo.toml
anc/runtime/hal/cu-cam-pan/src/: lib.rs
anc/runtime/hal/cu-hcsr04/: Cargo.toml
anc/runtime/hal/cu-hcsr04/src/: lib.rs
anc/runtime/hal/cu-irencoder/: Cargo.toml
anc/runtime/hal/cu-irencoder/src/: lib.rs
anc/runtime/hal/cu-powermon/: Cargo.toml
anc/runtime/hal/cu-powermon/src/: lib.rs
anc/runtime/hal/cu-propulsion/: Cargo.toml
anc/runtime/hal/cu-propulsion/src/: lib.rs
anc/runtime/hal/cu-zenoh-sink/: Cargo.toml
anc/runtime/hal/cu-zenoh-sink/src/: lib.rs
anc/runtime/hal/cu-zenoh-src/: Cargo.toml
anc/runtime/hal/cu-zenoh-src/src/: lib.rs
anc/runtime/hal/dual-mtr-ctrlr/: Cargo.toml
anc/runtime/hal/dual-mtr-ctrlr/src/: lib.rs
anc/runtime/hal/lmtr-ctrlr/: Cargo.toml
anc/runtime/hal/lmtr-ctrlr/src/: lib.rs
anc/runtime/hal/mtr-ctrlr/: Cargo.toml
anc/runtime/hal/mtr-ctrlr/src/: lib.rs
anc/runtime/hal/rmtr-ctrlr/: Cargo.toml
anc/runtime/hal/rmtr-ctrlr/src/: lib.rs
anc/runtime/hal/speed-ctrlrs/: Cargo.toml
anc/runtime/hal/speed-ctrlrs/src/: lib.rs
anc/runtime/hal/src/: lib.rs
anc/runtime/hal/zenoh-session/: Cargo.toml
anc/runtime/hal/zenoh-session/src/: lib.rs
anc/runtime/palanuk-runtime/: Cargo.toml  _rtimecfg.ron  rtimecfg.ron  taskdag.ron
anc/runtime/palanuk-runtime/src/: logreader.rs  main.rs  old_main.rs  tasks.rs
anc/runtime/quick-zenoh-client/: client.py  requirements.txt
anc/src/: main.rs
ec/: README.md
itp/: Notes.txt  README.md  requirements.txt
itp/tests/: command.py  model_test.py  overall_algorithm.py  parking_service.py  setup_instructions.txt  test.py
itp/zenoh/: ITP_Coordinates_pub.py  ODD_websocket.py  pub_ITP.py  sub_states.py
odd/dashboard/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
odd/python-bridge/: demo_bridge.py  fake_motors.py  fake_vehicle.py  requirements.txt  simple-bridge.py
src/: main.cpp
(+38 files in other folders)
