[workspace]
resolver = "3"
members = [
    "palanuk-runtime",
    "hal/cu-hcsr04",
    "hal/cu-propulsion",
    "hal/cu-cam-pan",
    "hal/cu-powermon",
    "hal/cu-zenoh-src",
    "hal/cu-zenoh-sink",
    "aux/propulsion-adapter",
    "aux/arbitrator",
    "aux/anc-pub",
    "hal/mtr-ctrlr",
    "hal/lmtr-ctrlr",
    "hal/rmtr-ctrlr",
    "aux/propulsion-cleaver",
    "hal/dual-mtr-ctrlr",
    "aux/panner-adapter",
    "aux/opencv-iox2",
    "aux/zsrc-merger",
    "aux/ec-pub"
    ]

[workspace.package]
publish = false
version = "0.1.0"
authors = ["Ander Jiloh <ander.jiloh@gmail.com>"]
edition = "2024"
license = "GPL-3.0-only"
keywords = ["autonomous", "copper-rs", "robotics", "real-time"]

[workspace.dependencies]
cu29 = { version = "0.12.0", features = ["macro_debug"] }
cu29-runtime = "0.12.0"
cu29-export = { version = "0.12.0" }
cu29-helpers = "0.12.0"
cu-pid = "0.12.0"
cu-bincode = "=2.0.2"
serde = "1.0.228"
hcsr04-gpio-cdev = "0.1.4"
# hcsr04-gpio-cdev = { path = "/Users/ander/Documents/proj/hc-sr04-gpio-cdev" }
dumb-sysfs-pwm = { git = "https://github.com/andergisomon/dumb-sysfs-pwm.git" }
# dumb-sysfs-pwm = { path = "/Users/ander/Documents/proj/dumb-sysfs-pwm" }
gpio-cdev = "0.6.0"
cu-propulsion = { path = "./hal/cu-propulsion" }
cu-cam-pan = { path = "./hal/cu-cam-pan" }
cu-hcsr04 = { path = "./hal/cu-hcsr04" }
cu-powermon = { path = "./hal/cu-powermon" }
cu-zenoh-src = { path = "./hal/cu-zenoh-src" }
cu-consolemon = "0.12.0"
ctrlc = "3.5.1"
libc = "0.2.176"
core_affinity = "0.8.3"
iceoryx2 = "0.8.1"
zenoh = "1.6.2"
propulsion-adapter = { path = "./aux/propulsion-adapter" }
mtr-ctrlr = { path = "./hal/mtr-ctrlr" }
anc-pub = { path = "./aux/anc-pub" }
ec-pub = { path = "./aux/ec-pub" }
opencv-iox2 = { path = "./aux/opencv-iox2" }
rmp-serde = { version = "1.3.1" }
cu-zenoh-sink = { path = "./hal/cu-zenoh-sink" }

[build]
target = "aarch64-unknown-linux-gnu"

[profile.release]
debug = false
