[workspace]
resolver = "3"
members = [
    "palanuk-runtime",
    "hal/cu-hcsr04",
    "hal/cu-propulsion",
    "hal/cu-cam-pan",
    "hal/cu-powermon",
    "hal/cu-zenoh-src",
    "hal/cu-zenoh-sink",
    "aux/propulsion-adapter",
    "aux/arbitrator",
    "aux/anc-pub",
    "hal/dual-mtr-ctrlr",
    "aux/panner-adapter",
    "aux/opencv-iox2",
    "aux/zsrc-merger",
    "aux/ec-pub",
    "aux/opencv-splitter",
    "hal/zenoh-session",
    ]

[workspace.package]
publish = false
version = "0.1.0"
authors = ["Ander Jiloh <ander.jiloh@gmail.com>"]
edition = "2024"
license = "GPL-3.0-only"
keywords = ["autonomous", "copper-rs", "robotics", "real-time"]

[workspace.dependencies]
cu29 = { version = "0.12.0", features = ["macro_debug"] }
cu29-runtime = "0.12.0"
cu29-export = { version = "0.12.0" }
cu29-helpers = "0.12.0"
cu-consolemon = "0.12.0"
cu-pid = "0.12.0"
cu-bincode = "=2.0.2"
serde = "1.0.228"
hcsr04-gpio-cdev = "0.1.4"
# hcsr04-gpio-cdev = { path = "/Users/ander/Documents/proj/hc-sr04-gpio-cdev" }
dumb-sysfs-pwm = { git = "https://github.com/andergisomon/dumb-sysfs-pwm.git" }
# dumb-sysfs-pwm = { path = "/Users/ander/Documents/proj/dumb-sysfs-pwm" }
gpio-cdev = "0.6.0"

cu-propulsion = { path = "./hal/cu-propulsion" }
cu-cam-pan = { path = "./hal/cu-cam-pan" }
cu-hcsr04 = { path = "./hal/cu-hcsr04" }
cu-powermon = { path = "./hal/cu-powermon" }
cu-zenoh-src = { path = "./hal/cu-zenoh-src" }

ctrlc = "3.5.1"
libc = "0.2.176"
core_affinity = "0.8.3"
iceoryx2 = { version = "0.8.1", features = ["libc_platform"] }
zenoh = "1.7.2"
rmp-serde = { version = "1.3.1" }

propulsion-adapter = { path = "./aux/propulsion-adapter" }
anc-pub = { path = "./aux/anc-pub" }
ec-pub = { path = "./aux/ec-pub" }
opencv-iox2 = { path = "./aux/opencv-iox2" }
cu-zenoh-sink = { path = "./hal/cu-zenoh-sink" }
zenoh-session = { path = "./hal/zenoh-session" }
zsrc-merger = { path = "./aux/zsrc-merger" }
panner-adapter = { path = "./aux/panner-adapter" }
dual-mtr-ctrlr = { path = "./hal/dual-mtr-ctrlr" }
arbitrator = { path = "./aux/arbitrator" }
opencv-splitter = { path = "./aux/opencv-splitter" }

[build]
target = "aarch64-unknown-linux-gnu"

[profile.release]
debug = false

[profile.dev]
opt-level = 0
debug = 2
strip = "symbols" # "none" | "debuginfo" | "symbols"
incremental = true
