[package]
name = "palanuk-runtime"
version = "0.1.0"
edition = "2024"

[features]
logviz = ["cu29/logviz"]

[dependencies]
cu29 = { workspace = true }
cu29-runtime = { workspace = true }
cu29-export = { workspace = true }
cu29-logviz = { workspace = true }
cu29-helpers = { workspace = true }
cu-consolemon = { workspace = true }
cu-logmon = { workspace = true }
cu-pid = { workspace = true }

cu-propulsion = { workspace = true }
cu-cam-pan = { workspace = true }
cu-hcsr04 = { workspace = true }
cu-powermon = { workspace = true }
cu-zenoh-sink = { workspace = true }
cu-zenoh-src = { workspace = true}

serde = { workspace = true }
ctrlc = { workspace = true }
libc = { workspace = true }
core_affinity = { workspace = true }
rerun = { version = "0.29", default-features = false, features = ["sdk", "server", "web_viewer"] }
clap = { version = "4.5", features = ["derive"] }
re_web_viewer_server = "0.29"

ec-pub = { workspace = true }
zsrc-merger = { workspace = true }
opencv-iox2 = { workspace = true }
propulsion-adapter = { workspace = true }
panner-adapter = { workspace = true }
dual-mtr-ctrlr = { workspace = true }
arbitrator = { workspace = true }
anc-pub = { workspace = true }
opencv-splitter = { workspace = true }

cu-irencoder = { workspace = true }
speed-err-adapter = { workspace = true }
speed-correction-summer = { workspace = true }
speed-ctrlrs = { workspace = true }
itp-merger = { workspace = true }

[[bin]]
name = "palanuk-runtime"
path = "src/main.rs"

[[bin]]
name = "palanuk-logreader"
path = "src/logreader.rs"
