[package]
name = "arbitrator"
publish.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
cu29 = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
propulsion-adapter = { workspace = true }
cu-propulsion = { workspace = true }
cu-pid = { workspace = true }
herald = { workspace = true }
