[package]
name = "commander"
publish.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
cu29 = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
cu-hcsr04 = { workspace = true }
cu-zenoh-src = { workspace = true }
cu-cam-pan = { workspace = true }
cu-propulsion = { workspace = true }
