[package]
name = "opencv-iox2"
publish.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
cu29 = { workspace = true }
iceoryx2 = { workspace = true }
serde = { workspace = true }
cu-bincode = { workspace = true }
