[package]
name = "opencv-splitter"
publish.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
cu29 = { workspace = true }
serde = { workspace = true }
cu-bincode = { workspace = true }
opencv-iox2 = { workspace = true }
