[package]
name = "panner-adapter"
publish.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
cu29 = { workspace = true }
bincode = { workspace= true }
cu-cam-pan = { workspace = true }
propulsion-adapter = { workspace = true }
