[package]
name = "propulsion-cleaver"
publish.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
cu29 = { workspace = true }
cu-propulsion = { workspace = true }
herald = { workspace = true }
