[package]
name = "speed-correction-summer"
publish.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
cu29 = { workspace = true }
cu-pid = { workspace = true }
cu-propulsion = { workspace = true }
