[package]
name = "speed-err-adapter"
publish.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
cu29 = { workspace = true }
cu-irencoder = { workspace = true }
speed-ctrlrs = { workspace = true }
cu-propulsion = { workspace = true }
