[package]
name = "cu-powermon"
publish.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
dumb-ina219 = "0.1.3"
cu29 = { workspace = true }
serde = { workspace = true }
cu-bincode = { workspace = true }

[build-dependencies]
cfg_aliases = "0.2.1"
