[package]
name = "cu-zenoh-sink"
publish.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
keywords.workspace = true

[dependencies]
zenoh = { workspace = true }
cu29 = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }

[build-dependencies]
cfg_aliases = "0.2.1"
