[package]
name = "cu-zenoh-src"
publish.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
keywords.workspace = true

[dependencies]
zenoh = { workspace = true }
cu29 = { workspace = true }
bincode = { workspace = true }

[build-dependencies]
cfg_aliases = "0.2.1"
